minor updates
* add name and brand on DiaryEntry
* bugfix for finding food by name regarding null brands